# writ

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/writ-cli/: Cargo.toml
crates/writ-cli/src/: main.rs
crates/writ-core/: Cargo.toml
crates/writ-core/src/: bridge.rs  context.rs  convergence.rs  diff.rs  error.rs  fsutil.rs  hash.rs  hooks.rs  ignore.rs  index.rs  lib.rs  lock.rs  object.rs  remote.rs  repo.rs  seal.rs  spec.rs  state.rs
crates/writ-py/: Cargo.toml  README.md  pyproject.toml
crates/writ-py/python/writ/: __init__.py  sdk.py
crates/writ-py/src/: lib.rs
crates/writ-py/tests/: conftest.py  test_install_e2e.py  test_persona_a.py  test_sdk.py  test_writ.py
packaging/homebrew/: writ.rb
