[package]
name = "writ-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for writ — the AI-native version control system"

[[bin]]
name = "writ"
path = "src/main.rs"

[dependencies]
writ-core = { path = "../writ-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
