[package]
name = "writ-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for writ — the AI-native version control system"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
