[package]
name = "writ-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
writ-core = { path = "../writ-core", features = ["bridge"] }
pyo3 = { version = "0.23", features = ["abi3-py38"] }
pythonize = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
